# memvis

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md  memvis_bridge.h  rtmap_bridge.h  tracer.c
.github/workflows/: ci.yml
docs/: USAGE.md  architecture.md  engine.md  ring-protocol.md  tracer.md
engine/: Cargo.toml
engine/src/: check.rs  config.rs  diff.rs  dwarf.rs  heap_graph.rs  index.rs  lib.rs  lint.rs  main.rs  proc_maps.rs  reconciler.rs  record.rs  ring.rs  shadow_regs.rs  topology.rs  tui.rs  world.rs
examples/: heap_chain.c
test/: run_e2e.sh
