[package]
name = "memvis"
version = "0.2.0"
edition = "2021"
license = "MIT"
authors = ["Yousef Mahmoud <yosefkhalil610@gmail.com>"]

[[bin]]
name = "memvis"
path = "src/main.rs"

[[bin]]
name = "memvis-check"
path = "src/check.rs"

[[bin]]
name = "memvis-diff"
path = "src/diff.rs"

[[bin]]
name = "memvis-lint"
path = "src/lint.rs"

[dependencies]
libc = "0.2"
gimli = "0.31"
object = { version = "0.36", default-features = false, features = ["read", "elf"] }
ratatui = "0.29"
crossterm = "0.28"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
