[package]
name = "rtmap"
version = "0.2.0"
edition = "2021"
license = "Apache-2.0"
authors = ["Yousef Mahmoud <yosefkhalil610@gmail.com>"]

[[bin]]
name = "rtmap"
path = "src/main.rs"

[[bin]]
name = "rtmap-check"
path = "src/check.rs"

[[bin]]
name = "rtmap-diff"
path = "src/diff.rs"

[[bin]]
name = "rtmap-lint"
path = "src/lint.rs"

[dependencies]
libc = "0.2"
gimli = "0.33"
object = { version = "0.36", default-features = false, features = ["read", "elf"] }
ratatui = "0.29"
crossterm = "0.28"
arrayvec = "0.7.6"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
